# FoosStat

./: .dockerignore  .gitignore  AGENT.md  Dockerfile  FoosStat.sln  GEMINI.md  analytics.py  fly.toml  foos.py  foosball_game_template.html  foosball_layout.html  foosball_layout_htmx.html  main.py  markov_analytics.py  package.json  pyproject.toml  requirements.txt  server.py  splash.html  test_analytics.py  test_fifth_set.py  test_fixed_server.py  test_manual.py  wrangler.toml
FoosStat/: Analytics.fs  Domain.fs  FoosStat.fsproj  Games.fs  packages.config
FoosStat2/: Analytics.fs  Domain.fs  FoosStat.fsproj  FoosStat2.fsproj  Games.fs  Parser.fs  packages.config
FoosStatView/: Client.fs  Domain.fs  FoosStatView.fsproj  Games.fs  Main.fs  Main.html  Parser.fs  extra.files  packages.config
FoosView/: Client.fs  FoosView.fsproj  Main.fs  Main.html  packages.config
domain/: models.py  services.py
games/: data.txt  hannibal_sven_aarhus_open_2020.txt  mathias_peter_vs_collignon_atha.txt
mobile/foosstat/: .gitignore  build.bat  package.json
mobile/foosstat/App/: FoosStat.unoproj  MainView.ux
mobile/foosstat/App/Components/: BallStateButton.ux  WhiteText.ux
mobile/foosstat/App/Pages/: DefaultPage.ux
mobile/foosstat/App/Pages/GamePage/: GamePage.ux
mobile/foosstat/App/Pages/StatsPage/: StatsPage.ux
mobile/foosstat/src/: Domain.fs  FoosStat.fs  FoosStat.fsproj  GamePage.fs  StatsPage.fs  fableconfig.json
src/: worker.py
stat_worker/: stat_worker.py  wrangler.toml
tests/: test_analytics.py  test_fixed_server.py  test_manual.py
