[project]
name = "foosstat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.2.0",
    "fastapi>=0.115.12",
    "mypy>=1.16.1",
    "numpy>=2.2.6",
    "python-multipart>=0.0.20",
    "ty>=0.0.1a15",
    "types-bleach>=6.2.0.20250514",
    "types-pyyaml>=6.0.12.20250516",
    "types-ujson>=5.10.0.20250326",
    "uvicorn[standard]>=0.34.2",
    "websockets>=15.0.1",
]
